@@ -24,3 +24,5 @@ Test::Warnings = 0
 
 [Test::CheckBreaks]
 conflicts_module = Moose::Conflicts
+
+[Deprecated]
